feat: SAML Logout
- Main logout flows are working
- IDP Initiated logout is working
- Handle metadata XML passed in instead of metadata location for both bootstrap and SamlIdentityProviderConfigurator

Signed-off-by: Duane May <duane.may@broadcom.com>